--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.2 2004/02/09 12:02:32 patthoyts Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.3 2004/11/23 00:03:04 patthoyts Exp $
 
 #========================================================================
 # Edit the following few lines when writing a new extension
@@ -233,7 +233,7 @@ install-doc: doc
 	done
 
 test: binaries libraries
-	$(TCLSH) `@CYGPATH@ $(srcdir)/tests/all.tcl` $(TESTFLAGS)
+	echo load $($(PACKAGE)_LIB_FILE) \; cd $(srcdir)/tests \; source all.tcl | $(TCLSH) $(TESTFLAGS)
 
 shell: binaries libraries
 	@$(TCLSH) $(SCRIPT)
