--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: Makefile.in,v 1.5 2005/05/19 23:30:34 patthoyts Exp $
+# RCS: @(#) $Id: Makefile.in,v 1.6 2005/11/27 21:31:59 patthoyts Exp $
 
 #========================================================================
 # Add additional lines to handle any additional AC_SUBST cases that
@@ -176,7 +176,7 @@ all: binaries libraries doc
 # of the Makefile, in the "BINARIES" variable.
 #========================================================================
 
-binaries: $(BINARIES) pkgIndex.tcl
+binaries: $(BINARIES) pkgIndex.tcl-hand
 
 libraries:
 
@@ -188,7 +188,7 @@ libraries:
 #========================================================================
 
 DTPLITE=@DTPLITE@
-doc:
+doc: udp.n
 
 udp.n: $(srcdir)/doc/udp.man
 	test -x $(DTPLITE) && $(DTPLITE) -o $@ nroff $(srcdir)/doc/udp.man
