--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -18,7 +18,7 @@
 # Copyright (c) 2003 Pat Thoyts
 #
 #-------------------------------------------------------------------------
-# RCS: @(#)$Id: makefile.vc,v 1.6 2007/04/10 12:25:57 patthoyts Exp $
+# RCS: @(#)$Id: makefile.vc,v 1.7 2007/04/10 23:36:14 patthoyts Exp $
 #-------------------------------------------------------------------------
 
 !if !defined(MSDEVDIR) && !defined(MSVCDIR) && !defined(VCToolkitInstallDir)
@@ -281,7 +281,7 @@ lflags	= $(lflags) -ws:aggressive
 dlllflags = $(lflags) -dll
 conlflags = $(lflags) -subsystem:console
 guilflags = $(lflags) -subsystem:windows
-baselibs   = $(TCLSTUBLIB) wsock32.lib
+baselibs   = $(TCLSTUBLIB) ws2_32.lib
 
 #---------------------------------------------------------------------
 # TclTest flags
