--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -18,7 +18,7 @@
 # Copyright (c) 2003 Pat Thoyts
 #
 #-------------------------------------------------------------------------
-# RCS: @(#)$Id: makefile.vc,v 1.7 2007/04/10 23:36:14 patthoyts Exp $
+# RCS: @(#)$Id: makefile.vc,v 1.8 2014/02/13 20:49:57 huubeikens Exp $
 #-------------------------------------------------------------------------
 
 !if !defined(MSDEVDIR) && !defined(MSVCDIR) && !defined(VCToolkitInstallDir)
@@ -156,7 +156,7 @@ Please `cd` to its location first.
 PROJECT = udp
 !include "rules.vc"
 
-DOTVERSION      = 1.0.9
+DOTVERSION      = 1.0.10
 VERSION         = $(DOTVERSION:.=)
 STUBPREFIX      = $(PROJECT)stub
 
@@ -260,7 +260,7 @@ ldebug	= -release -opt:ref -opt:icf,3
 !endif
 
 ### Declarations common to all linker options
-lflags	= -nologo -machine:$(MACHINE) $(ldebug)
+lflags	= -nologo -machine:$(MACHINE) $(ldebug) /verbose:lib
 
 !if $(PROFILE)
 lflags	= $(lflags) -profile
