--- a/Makefile.in
+++ b/Makefile.in
@@ -129,8 +129,10 @@ EXTRA_PATH	= $(top_builddir):$(TCL_BIN_DIR)
 TCLLIBPATH	+= $(top_builddir)
 TCLSH_ENV	= TCL_LIBRARY=`@CYGPATH@ $(TCL_SRC_DIR)/library` \
 		  @LD_LIBRARY_PATH_VAR@="$(EXTRA_PATH):$(@LD_LIBRARY_PATH_VAR@)" \
-		  PATH="$(EXTRA_PATH):$(PATH)" \
 		  TCLLIBPATH="$(TCLLIBPATH)"
+# REMOVED BECAUSE ON WINDOWS 7, paths with () screw up and die
+#		  PATH="$(EXTRA_PATH):$(PATH)"
+# 
 TCLSH_PROG	= @TCLSH_PROG@
 TCLSH		= $(TCLSH_ENV) $(TCLSH_PROG)
 SHARED_BUILD	= @SHARED_BUILD@
