--- a/configure.in
+++ b/configure.in
@@ -27,7 +27,7 @@ AC_INIT([udp], [1.0.10])
 # as well as PKG_LIB_FILE and PKG_STUB_LIB_FILE.
 #--------------------------------------------------------------------
 
-TEA_INIT([3.9])
+TEA_INIT([3.10])
 
 AC_CONFIG_AUX_DIR(tclconfig)
 
@@ -128,16 +128,6 @@ TEA_CONFIG_CFLAGS
 TEA_ENABLE_SYMBOLS
 
 #--------------------------------------------------------------------
-# Everyone should be linking against the Tcl stub library.  If you
-# can't for some reason, remove this definition.  If you aren't using
-# stubs, you also need to modify the SHLIB_LD_LIBS setting below to
-# link against the non-stubbed Tcl library.  Add Tk too if necessary.
-#--------------------------------------------------------------------
-
-AC_DEFINE(USE_TCL_STUBS)
-dnl#AC_DEFINE(USE_TK_STUBS)
-
-#--------------------------------------------------------------------
 # Additional headers or symbols needed for the tcludp projects.
 #--------------------------------------------------------------------
 
@@ -175,6 +165,4 @@ TEA_PROG_DTPLITE
 # which require substituting the AC variables in.  Include these here.
 #--------------------------------------------------------------------
 
-#AC_SUBST([Makefile config.cache config.log config.status])
-#AC_CONFIG_FILES([Makefile])
-AC_OUTPUT([Makefile pkgIndex.tcl])
+AC_OUTPUT([Makefile pkgIndex.tcl practcl.rc:tclconfig/practcl.rc.in])
