Store HTML docs in repo since generation at install time mandates availability of mpexpand

--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -32,11 +32,13 @@ PRJ_DOCS = $(OUT_DIR)\udp.html
 
 # Project specific targets
 
-install:    default-install-demos
+install:    default-install-demos default-install-docs-html
 pkgindex:   default-pkgindex
 
 # Implicit rule to generate html from man files
-# NOTE: this requires doctools from tcllib
+# NOTE: this requires doctools from tcllib hence it is not intended
+# to be run during install. Rather, use it to generate a new version
+# of HTML docs to be stored in the repository.
 DOC2HTML = $(TCLSH) "$(TOOLSDIR)\mpexpand.tcl" html
 {$(DOCDIR)}.man{$(OUT_DIR)}.html:
 	$(DOC2HTML) $< $@
@@ -51,10 +53,5 @@ set f [open $$name w]; puts -nonewline $$f $$d; close $$f
 
 # Cannot use default-install-docs because we generate docs on the fly
 doc:        setup $(PRJ_DOCS)
-install-docs: doc
-	@echo Installing documentation to '$(DOC_INSTALL_DIR)'
-	@if not exist $(DOC_INSTALL_DIR)\NUL mkdir "$(DOC_INSTALL_DIR)"
-	@$(CPY) "$(DOCDIR)\manpage.css" "$(DOC_INSTALL_DIR)\" >NUL
-	@for %i in ($(PRJ_DOCS)) do @$(CPY) %i "$(DOC_INSTALL_DIR)\" > NUL
 
 
