Changes for TCL 9.0.
Fixed package requires to work with TCL 9.0
Removed obsolete macro _ANSI_ARGS_.
Macros: CONST84 to const, WIN32 to _WIN32, and CONST to const.
Replaced Tcl_SaveResult with Tcl_SaveInterpState, Tcl_RestoreResult with Tcl_RestoreInterpState, and Tcl_DiscardResult with Tcl_DiscardInterpState.

--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -21,7 +21,8 @@ PROJECT = udp
 
 PRJ_OBJS = $(TMP_DIR)\udp_tcl.obj
 PRJ_DEFINES     = -D_CRT_SECURE_NO_WARNINGS \
-		  -D_WINSOCK_DEPRECATED_NO_WARNINGS
+		  -D_WINSOCK_DEPRECATED_NO_WARNINGS \
+		  -D_WIN32
 PRJ_LIBS	= ws2_32.lib
 
 PRJ_DOCS = $(OUT_DIR)\udp.html
