--- a/pkgIndex.tcl.in
+++ b/pkgIndex.tcl.in
@@ -4,12 +4,21 @@
 if {[package vsatisfies [package provide Tcl] 9.0-]} {
     package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ \
 	    [list load [file join $dir @PKG_LIB_FILE9@] [string totitle @PACKAGE_NAME@]]
+    set initScript [file join $dir @PACKAGE_NAME@.tcl]
+    if {[file exists $initScript]} {
+	source -encoding utf-8 $initScript
+    }
 } else {
+    if {![package vsatisfies [package provide Tcl] 8.5]} {return}
     package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ [list apply {{dir} {
 	if {[string tolower [file extension @PKG_LIB_FILE8@]] in [list ".dll" ".so"]} {
 	    load [file join $dir @PKG_LIB_FILE8@] [string totitle @PACKAGE_NAME@]
 	} else {
 	    load {} [string totitle @PACKAGE_NAME@]
+	}
+	set initScript [file join $dir @PACKAGE_NAME@.tcl]
+	if {[file exists $initScript]} {
+	    source -encoding utf-8 $initScript
 	}
     }} $dir]
 }
