Consolidated make dist items

--- a/Makefile.in
+++ b/Makefile.in
@@ -369,18 +369,12 @@ dist: dist-clean $(srcdir)/manifest.uuid
 		$(srcdir)/aclocal.m4 $(srcdir)/configure.ac $(DIST_DIR)/
 	$(DIST_INSTALL_SCRIPT) $(srcdir)/configure $(DIST_DIR)/
 
-	# TEA files
-	$(INSTALL_DATA_DIR) $(DIST_DIR)/tclconfig
-	$(DIST_INSTALL_DATA) $(srcdir)/tclconfig/README.txt \
-	    $(srcdir)/tclconfig/tcl.m4 $(srcdir)/tclconfig/install-sh \
-	    $(srcdir)/tclconfig/license.terms $(DIST_DIR)/tclconfig/
-
 	# Extension files
 	$(DIST_INSTALL_DATA) $(srcdir)/ChangeLog \
-	    $(srcdir)/license.terms $(srcdir)/manifest.uuid \
-	    $(srcdir)/README.txt $(srcdir)/pkgIndex.tcl.in $(DIST_DIR)/
+		$(srcdir)/license.terms $(srcdir)/manifest.uuid \
+		$(srcdir)/README.txt $(srcdir)/pkgIndex.tcl.in $(DIST_DIR)/
 
-	list='demos doc generic tests tools win'; \
+	list='demos doc generic tclconfig tests tools win'; \
 	for p in $$list; do \
 	    if test -d $(srcdir)/$$p ; then \
 		$(INSTALL_DATA_DIR) $(DIST_DIR)/$$p; \
